# G29_MALICIOUS-WEBSITE-DETECTION-AND-BLOCKING-SYSTEM-USING-eBPF

ClientHello-Capture/: DatabaseManager.cpp  DatabaseManager.h  Makefile  PacketProcessor.cpp  PacketProcessor.h  README.md  Utils.cpp  Utils.h  issues.md  main.cpp
major-project/: .gitignore  .gitlab-ci.yml  .gitmodules  Makefile.am  README.md  VERSION  configure.ac
major-project/deploy/: .gitignore  Makefile.am  functions.sh.in  netifyd.conf.in  netifyd.default  netifyd.init.in
major-project/deploy/buildroot/: add-plugin.sh
major-project/deploy/buildroot/package/netifyd/: S50netifyd  netifyd.mk.in
major-project/deploy/debian/: Makefile.am  conffiles.in  control.in  debian.init.in  netifyd.install.in  rules.in
major-project/deploy/freebsd/: .gitignore  Makefile.in  pkg-descr  pkg-plist
major-project/deploy/freebsd/files/: netifyd.in
major-project/deploy/interfaces.d/: 10-example-nfq.conf
major-project/deploy/openwrt/: Makefile.in
major-project/deploy/openwrt/files/: netifyd.init.in
major-project/deploy/profiles.d/: .gitignore
major-project/deploy/rpm/: Makefile.am  netifyd.spec.in
major-project/deploy/systemd/: Makefile.am  env.sh.in  exec-pre.sh.in  netifyd.service.in
major-project/doc/: BUILD-freebsd.md  Makefile.am  alpn-protocol-ids.csv  json-socket-example.csv  netifyd-sample.conf  netifyd.8.in  netifyd.conf.5.in
major-project/include/: .gitignore  Makefile.am  nd-addr.hpp  nd-apps.hpp  nd-base64.hpp  nd-capture-nfq.hpp  nd-capture-pcap.hpp  nd-capture-tpv3.hpp  nd-capture.hpp  nd-category.hpp  nd-config.hpp  nd-conntrack.hpp  nd-detection.hpp  nd-dhc.hpp  nd-except.hpp  nd-fhc.hpp  nd-flags.hpp  nd-flow-map.hpp  nd-flow-parser.h  nd-flow-parser.hpp  nd-flow.hpp  nd-instance.hpp  nd-napi.hpp  nd-ndpi.hpp  nd-netlink.hpp  nd-packet.hpp  nd-plugin.hpp  nd-progress.hpp  nd-protos.hpp  nd-risks.hpp  nd-serializer.hpp  nd-signal.hpp  nd-thread.hpp  nd-tls-alpn.hpp  nd-util.hpp  nd-version.hpp.in  netifyd.hpp
major-project/include/tommyds/: readme.md  tommyalloc.h.gch  tommychain.h.gch
major-project/libs/gperftools/: .gitignore  Makefile.am
major-project/libs/inih/: .gitignore  Makefile.am  configure.ac
major-project/libs/inih/cpp/: INIReader.cpp  INIReader.h
major-project/libs/ndpi/: configure.ac
major-project/libs/ndpi/src/include/: ndpi_api.h  ndpi_typedefs.h
major-project/libs/ndpi/src/lib/: ndpi_main.c  ndpi_utils.c
major-project/libs/ndpi/src/lib/protocols/: s7comm.c  tls.c  viber.c
major-project/m4/: .gitignore  README.md  ax_build_uuid.m4  ax_check_netifyd.m4  ax_func_which_nft_run_cmd_from_buffer.m4
major-project/src/: .gitignore  Makefile.am  nd-addr.cpp  nd-apps.cpp  nd-capture-nfq.cpp  nd-capture-pcap.cpp  nd-capture-tpv3.cpp  nd-capture.cpp  nd-category.cpp  nd-config.cpp  nd-conntrack.cpp  nd-detection.cpp  nd-dhc.cpp  nd-except.cpp  nd-fhc.cpp  nd-flow-criteria.c  nd-flow-criteria.h  nd-flow-criteria.l  nd-flow-expr.cpp  nd-flow-expr.hpp  nd-flow-expr.ypp  nd-flow-map.cpp  nd-flow.cpp  nd-instance.cpp  nd-napi.cpp  nd-ndpi.cpp  nd-netlink.cpp  nd-plugin.cpp  nd-progress.cpp  nd-protos.cpp  nd-risks.cpp  nd-thread.cpp  nd-util.cpp  netifyd.cpp
major-project/tests/: .gitignore  Makefile.am  check-protocols.cpp  check-risks.cpp  netifyd-test-pcap.conf.in  test-pcap-debug.sh  test-pcap-regression.sh
major-project/tests/massif/: netifyd.conf
major-project/tests/pcap/: .gitignore
major-project/tests/scratch/: array.cpp  bad-alloc.cpp  cref.cpp  octect-stream.cpp
major-project/tests/scratch/enum/: enum.cpp  enum.hpp
major-project/util/: .gitignore  CONFIGURE-devel.sh  Makefile.am  RUN-DEBUG-devel.sh  check-flow-event-digests.py  check-protocols.sh  generate-alpn-include.sh.in  new-version.sh  nsd-decode.sh  risks-to-csv.cpp
packet-filter-frontend/src/Pages/: Dashboard.jsx  LoginRegister.jsx
